# PRODIX

./: .gitignore  README.md  REPLIT_PROMPT.md  firebase.json  prompt_presentation_30_slides.md  pubspec.yaml  supabase_setup.sql
.opencode/: opencode.json
android/: build.gradle  gradle.properties  settings.gradle
android/androidenhancer/: build.gradle.kts
android/androidenhancer/src/main/rust/: Cargo.toml
android/androidenhancer/src/main/rust/src/: lib.rs
android/androidenhancer/src/main/rust/src/core/: engine.rs  mod.rs  mode.rs  runner.rs  tracker.rs
android/androidenhancer/src/main/rust/src/sense/: device.rs  mod.rs  touch.rs
android/androidenhancer/src/main/rust/src/tune/: cpu.rs  debug.rs  fs.rs  gpu.rs  io.rs  memory.rs  mod.rs  network.rs  paths.rs  power.rs  scheduler.rs  thermal.rs
android/androidenhancer/src/main/rust/src/util/: log.rs  mod.rs  sysfs.rs
android/app/: build.gradle  google-services.json
assets/data/: countries.json
ios/: Podfile
lib/: app_root.dart  firebase_options.dart  main.dart
linux/: CMakeLists.txt
scripts/: download_games_db.py
supabase/: add_country_column.sql  add_media_call_features.sql  add_missing_indexes_and_columns.sql  add_push_notifications.sql  add_push_notifications_for_posts.sql  add_social_columns.sql  add_squad_calls.sql  add_status_column.sql  add_team_calls.sql  add_webrtc_signaling.sql  add_xp_column.sql  prodix_setup.sql
supabase_migrations/: add_notification_payload_fields.sql  gamification.sql
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+205 files in other folders)
