[package]
name = "androidenhancer"
version = "2.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.42"
dashmap = "6.1"
evdev = "0.13.2"
glob = "0.3.3"
jni = "0.21.1"
once_cell = "1.21.3"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = { version = "0.37.2", default-features = false, features = ["system"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time", "fs", "io-util", "macros", "net"] }
tokio-util = { version = "0.7.17", features = ["compat"] }

[profile.release]
strip = true        # Remove symbols from binary
lto = true          # Link-time optimization for smaller binary
codegen-units = 1   # Better optimization
